Fix NPE in WeightedRandom